# foveal-vision

./: .gitignore  CLAUDE.md  README.md  estudio-example.yaml  instructionsNewNN.md  launcher.json  pyproject.toml  sweep-example.yaml
configs/networks/: fov-14.yaml  fov-16.yaml
configs/recipes/: corta.yaml  media.yaml
docs/: api.md  barrido-por-ejes.md  decisiones.md  formatos.md  glosario.md  herencia.md  launcher.md  organizacion.md  plan.md  protocolo.md  tests.md  ui.md
runs/cli-run-1/: metrics.jsonl  status.json  summary.json
runs/cli-sweep-1-0000/: config.json  metrics.jsonl  status.json  summary.json
runs/cli-sweep-1-0001/: config.json  metrics.jsonl  status.json  summary.json
runs/cli-sweep-1-0002/: config.json  metrics.jsonl  status.json  summary.json
runs/demo-seeds-0000/: config.json  metrics.jsonl  status.json  summary.json
runs/demo-seeds-0001/: config.json  metrics.jsonl  status.json  summary.json
runs/demo-seeds-0002/: config.json  metrics.jsonl  status.json  summary.json
runs/demo-seeds-0003/: config.json  metrics.jsonl  status.json  summary.json
runs/demo-seeds-0004/: config.json  metrics.jsonl  status.json  summary.json
runs/demo-seeds-0005/: config.json  metrics.jsonl  status.json  summary.json
runs/demo-seeds-0006/: config.json  metrics.jsonl  (+2 more)
scripts/: make_synth_source.py  verify_ui.py
tests/: conftest.py  test_api.py  test_contracts.py  test_derive.py  test_fovea.py  test_generate.py  test_studies.py  test_sweeps.py  test_winner.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+340 files in other folders)
