[project]
name = "foveal-vision"
version = "0.1.0"
description = "Foveated regional NN for paragraph-corner detection with automatic configuration sweeps"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.2",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
fv-extract = "fv.windows.cli:main"
fv-train = "fv.training.cli:main"
fv-sweep = "fv.sweeps.cli:main"
fv-oat = "fv.sweeps.oat_cli:main"
fv-study = "fv.studies.cli:main"
fv-api = "fv.api.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
